// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendConfirmation should render with destination 1`] = `
<SafeAreaViewComponent>
  <Gradient
    style={
      Object {
        "alignItems": "stretch",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "width": "100%",
      }
    }
  >
    <Gradient
      style={
        Object {
          "height": 44,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "marginTop": 10,
            },
            Object {
              "backgroundColor": "transparent",
              "height": 20,
              "marginRight": 5,
            },
          ]
        }
      >
        <FormattedText
          style={
            Object {
              "color": "#FFFFFF",
              "fontSize": 16,
            }
          }
        >
          Balance: 
          0
           
          BTC
           (
          
           
          0.00
          )
        </FormattedText>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "marginVertical": 12,
            },
            Object {
              "backgroundColor": "transparent",
              "height": 20,
              "marginRight": 5,
            },
          ]
        }
      >
        <ExchangeRate
          primaryInfo={
            Object {
              "displayCurrencyCode": "BTC",
              "displayDenomination": Object {
                "multiplier": "100000000",
                "name": "BTC",
                "symbol": "₿",
              },
              "exchangeCurrencyCode": "BTC",
              "exchangeDenomination": Object {
                "multiplier": "100000000",
                "name": "BTC",
                "symbol": "₿",
              },
            }
          }
          secondaryDisplayAmount={8000}
          secondaryInfo={
            Object {
              "displayCurrencyCode": "USD",
              "displayDenomination": Object {
                "multiplier": "1",
                "name": "",
                "symbol": "",
              },
              "exchangeCurrencyCode": "iso:USD",
              "exchangeDenomination": Object {
                "multiplier": "1",
                "name": "",
                "symbol": "",
              },
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "width": "100%",
          }
        }
      >
        <ExchangedFlipInput
          exchangeSecondaryToPrimaryRatio={8000}
          forceUpdateGuiCounter={0}
          isEditable={true}
          keyboardVisible={false}
          onExchangeAmountChanged={[Function]}
          overridePrimaryExchangeAmount=""
          primaryCurrencyInfo={
            Object {
              "displayCurrencyCode": "BTC",
              "displayDenomination": Object {
                "multiplier": "100000000",
                "name": "BTC",
                "symbol": "₿",
              },
              "exchangeCurrencyCode": "BTC",
              "exchangeDenomination": Object {
                "multiplier": "100000000",
                "name": "BTC",
                "symbol": "₿",
              },
            }
          }
          secondaryCurrencyInfo={
            Object {
              "displayCurrencyCode": "USD",
              "displayDenomination": Object {
                "multiplier": "1",
                "name": "",
                "symbol": "",
              },
              "exchangeCurrencyCode": "iso:USD",
              "exchangeDenomination": Object {
                "multiplier": "1",
                "name": "",
                "symbol": "",
              },
            }
          }
        />
        <Padding
          style={
            Object {
              "paddingHorizontal": 54,
            }
          }
        >
          <Item
            style={
              Object {
                "alignItems": "center",
                "flex": -1,
              }
            }
          >
            <Row
              style={
                Object {
                  "paddingVertical": 4,
                }
              }
            >
              <FormattedText
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#FFFFFF",
                      "fontSize": 16,
                    },
                  ]
                }
              >
                
              </FormattedText>
            </Row>
            <Row
              style={
                Object {
                  "paddingVertical": 4,
                }
              }
            >
              <Text
                style={Object {}}
              >
                <FormattedText>
                  To: airbitz
                </FormattedText>
              </Text>
            </Row>
            <Row
              style={
                Object {
                  "paddingVertical": 4,
                }
              }
            >
              <Text
                style={Object {}}
              >
                <FormattedText>
                  Address: 123123123
                </FormattedText>
              </Text>
            </Row>
          </Item>
        </Padding>
      </View>
      <Row
        style={
          Object {
            "height": 54,
            "paddingVertical": 18,
          }
        }
      />
      <Footer
        style={Object {}}
      >
        <ABSlider
          forceUpdateGuiCounter={0}
          parentStyle={
            Object {
              "width": 270,
            }
          }
          resetSlider={false}
          sliderDisabled={true}
        />
      </Footer>
    </View>
  </Gradient>
</SafeAreaViewComponent>
`;

exports[`SendConfirmation should render with standard props 1`] = `
<SafeAreaViewComponent>
  <Gradient
    style={
      Object {
        "alignItems": "stretch",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "width": "100%",
      }
    }
  >
    <Gradient
      style={
        Object {
          "height": 44,
        }
      }
    />
    <Component
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "width": "100%",
        }
      }
    >
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "marginTop": 10,
            },
            Object {
              "backgroundColor": "transparent",
              "height": 20,
              "marginRight": 5,
            },
          ]
        }
      >
        <FormattedText
          style={
            Object {
              "color": "#FFFFFF",
              "fontSize": 16,
            }
          }
        >
          Balance: 
          0
           
          BTC
           (
          
           
          0.00
          )
        </FormattedText>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "marginVertical": 12,
            },
            Object {
              "backgroundColor": "transparent",
              "height": 20,
              "marginRight": 5,
            },
          ]
        }
      >
        <ExchangeRate
          primaryInfo={
            Object {
              "displayCurrencyCode": "BTC",
              "displayDenomination": Object {
                "multiplier": "100000000",
                "name": "BTC",
                "symbol": "₿",
              },
              "exchangeCurrencyCode": "BTC",
              "exchangeDenomination": Object {
                "multiplier": "100000000",
                "name": "BTC",
                "symbol": "₿",
              },
            }
          }
          secondaryDisplayAmount={8000}
          secondaryInfo={
            Object {
              "displayCurrencyCode": "USD",
              "displayDenomination": Object {
                "multiplier": "1",
                "name": "",
                "symbol": "",
              },
              "exchangeCurrencyCode": "iso:USD",
              "exchangeDenomination": Object {
                "multiplier": "1",
                "name": "",
                "symbol": "",
              },
            }
          }
        />
      </Component>
      <Component
        style={
          Object {
            "alignItems": "center",
            "width": "100%",
          }
        }
      >
        <ExchangedFlipInput
          exchangeSecondaryToPrimaryRatio={8000}
          forceUpdateGuiCounter={0}
          isEditable={true}
          keyboardVisible={false}
          onExchangeAmountChanged={[Function]}
          overridePrimaryExchangeAmount=""
          primaryCurrencyInfo={
            Object {
              "displayCurrencyCode": "BTC",
              "displayDenomination": Object {
                "multiplier": "100000000",
                "name": "BTC",
                "symbol": "₿",
              },
              "exchangeCurrencyCode": "BTC",
              "exchangeDenomination": Object {
                "multiplier": "100000000",
                "name": "BTC",
                "symbol": "₿",
              },
            }
          }
          secondaryCurrencyInfo={
            Object {
              "displayCurrencyCode": "USD",
              "displayDenomination": Object {
                "multiplier": "1",
                "name": "",
                "symbol": "",
              },
              "exchangeCurrencyCode": "iso:USD",
              "exchangeDenomination": Object {
                "multiplier": "1",
                "name": "",
                "symbol": "",
              },
            }
          }
        />
        <Padding
          style={
            Object {
              "paddingHorizontal": 54,
            }
          }
        >
          <Item
            style={
              Object {
                "alignItems": "center",
                "flex": -1,
              }
            }
          >
            <Row
              style={
                Object {
                  "paddingVertical": 4,
                }
              }
            >
              <FormattedText
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#FFFFFF",
                      "fontSize": 16,
                    },
                  ]
                }
              >
                
              </FormattedText>
            </Row>
            <Row
              style={
                Object {
                  "paddingVertical": 4,
                }
              }
            >
              <Text
                style={Object {}}
              >
                <FormattedText>
                  Address: 123123123
                </FormattedText>
              </Text>
            </Row>
          </Item>
        </Padding>
      </Component>
      <Row
        style={
          Object {
            "height": 54,
            "paddingVertical": 18,
          }
        }
      />
      <Footer
        style={Object {}}
      >
        <ABSlider
          forceUpdateGuiCounter={0}
          parentStyle={
            Object {
              "width": 270,
            }
          }
          resetSlider={false}
          sliderDisabled={true}
        />
      </Footer>
    </Component>
  </Gradient>
</SafeAreaViewComponent>
`;
